Add URLs for slides, repo

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 				<section>
                     <h1>Testing and debugging code in Python</h1>
                     <p>
-                       <small>Geoff Hing</small>
+                    Geoff Hing (geoffhing@gmail.com, <a href="https://twitter.com/geoffhing/">@geoffhing</a>)
                     </p>
+                    <p>These slides: <a href="http://ghing.github.io/nicar2016-python-testing-debugging-slides">http://ghing.github.io/nicar2016-python-testing-debugging-slides</a></p> 
+                    <p>The excercises repo: <a href="https://github.com/ghing/nicar2016-python-testing-debugging-exercises/">https://github.com/ghing/nicar2016-python-testing-debugging-exercises/</a></p>
 				</section>
 
                 <section>
